# dbx-cli

./: .env.example  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  PRIVACY.md  README.md  deny.toml  flake.nix  package.json  pnpm-lock.yaml
.changeset/: README.md
.github/workflows/: audit.yml  ci.yml  nix.yml  policy.yml  publish-skills.yml  release-changesets.yml  release.yml
crates/dbx-cli/: Cargo.toml
crates/dbx-cli-core/: Cargo.toml
crates/dbx-cli-core/src/: auth.rs  client.rs  executor.rs  lib.rs  schema.rs  validate.rs
crates/dbx-cli/src/: main.rs
crates/dbx-cli/tests/: cli.rs
crates/dbxcli/: Cargo.toml
crates/dbxcli-core/: Cargo.toml
crates/dbxcli-core/src/: auth.rs  client.rs  error.rs  fields.rs  operations.rs  schema.rs
crates/dbxcli/src/: main.rs
crates/dbxcli/tests/: cli.rs
docs/: README.md
docs/explanation/: release-automation.md
docs/how-to/: release.md
docs/reference/: release-workflow.md
npm/: install.js  package.json  platform.js  run.js
scripts/: policy-check.sh  tag-release.sh  validate-skills.py  version-sync.sh
skills/dbx-core/: SKILL.md
skills/dbx-files/: SKILL.md
skills/dbx-shared/: SKILL.md
skills/dbx-users/: SKILL.md
skills/recipe-delete-path/: SKILL.md
skills/recipe-list-folder-recursive/: SKILL.md
