[workspace]
members = ["crates/dbx-cli", "crates/dbx-cli-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/davegomez/dbx-cli"
authors = ["dbx-cli contributors"]
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
reqwest = { version = "0.13", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std"] }
tracing = "0.1"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
