[package]
name = "dbx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Agent-first Dropbox CLI"
readme = "../../README.md"
keywords = ["dropbox", "cli", "automation", "agent", "oauth2"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "dbx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dbx-cli-core = { version = "0.1.0", path = "../dbx-cli-core" }
serde_json.workspace = true
tokio.workspace = true
webbrowser = "1.2.1"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"
